correct footer heigth and delete gap

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -23,6 +23,7 @@ body {
   --black: #1d1d1d;
   --blue: #aeb8fe;
   --grey: #DEDEDE;
+  --darkGrey: #837f7fb9;
   --gradient: rgba(67, 69, 77, 0.521);
   font-size: 16px;
 }
@@ -177,12 +178,14 @@ body {
   grid-template-rows: 30% 30% 30%;
   padding: 2rem;
   margin-bottom: 0;
+  
 }
 
 .footer-txt {
   display: grid;
   grid-template-rows: 50% 50%;
-  gap: 4rem;
+  margin-top: 2rem;
+  /* gap: 4rem; */
   line-height: 2rem;
 }
 .footer-lnk {
@@ -222,43 +225,71 @@ body {
   color: var(--black);
   font-size: 1rem;
   padding: 10px 24px 10px 24px;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 }
-.trail-card{
-  padding: 10px 24px 10px 24px;
+.trail-card {
+  padding: 1.5rem;
   background-color: var(--white);
-  margin: 1rem;
+  margin: 1rem 1rem 2rem 1rem;
   border-radius: 0.5rem;
 }
 .trail-card-img {
   width: 100%;
-} 
-.trail-card-txt{
+}
+.trail-card-txt {
   color: var(--black);
   font-family: "Broaek - Thin";
 }
+.trail-card-ttl{
+  font-size: 1.5rem;
+  font-family:"Broaek - Thin" ;
+}
+.trail-info {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  gap: 2rem;
+  /* justify-content: center; */
+  align-items: center;
+}
 
 /*RANGE*/
-.range-container{
+.range-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  background-color: var(--grey);
-  border-radius: 28px;
-}
-.range-nav{
-  display: flex;
-  border-top-left-radius: 28px;
-  border-top-right-radius: 28px;
-  justify-content: center;
-}
-.range-choice{
-  display: flex;
-}
-.range-search{
-  width: 300px;
-  height: 56px;
-  background-color: var(--grey);
-  border-color: none;
+  background-color: var(--grey); 
+  border-radius: 1.5rem;
+  padding: .5rem; 
+  margin: 1.5rem;
 }
 
+.range-options { 
+  display: flex;
+  flex-direction: column; 
+  gap: 1rem; 
+}
+
+.range-choice {
+  display: flex;
+  align-items: center; 
+  justify-content: space-between;
+}
+
+.range-nav form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.range-search {
+  width: 100%; 
+  padding: 1rem;
+  background-color: var(--darkGrey);
+  border: none;
+  border-radius: 0.5rem;
+  margin: 0;
+}
+
+label {
+  margin-right: 0.5rem; 
+}
